
2006-12-18 cjg
 * Moved stty in Compat::Term::ReadKey so that it's only called if needed,
    not at the start time, which was producing a warning in cron.

======================================================================
18/12/2006 - EPRINTS-3.0-RC-1
======================================================================

2006-12-21 tdb
 * Added url_name_value lookup script

2007-01-03 tmb
 * Added more examples for Request Copy configuration (eg. first author)

2007-01-03 tmb
 * Used File::Temp for temp files in Import screen

2007-01-03 tmb
 * Moved EFetch URL out of code
 * Added filter on PubMed ID - must be an int
 * Used LWP::Simple to get PubMed XML - not wget
 * Used File::Temp for temp file in PubMed ID import
 * Added extra mappings to PubMed XML import

2007-01-08 moj
 * Set userid to be optional
 * Previous commit: Changed userid to use user dataset rather than
    document.

2007-01-08 tdb
 * Added ApacheLog import plugin for access log data

2007-01-09 cjg 
 * Changed INSERT to REPLACE on login tickets- should fix bug with IP 
    changing on laptops.
 * Added $current_lang to available data in eprint script.
 * Moved exec'ing of SystemSetting binaries into Platform so that they
    can use custom code on non-UNIX platforms.

2007-01-09 tmb
 * Used TeX::Encode to provide some handling of accented characters in
    BibTeX import.

2007-01-10 tdb
 * Made ApacheLog optional on Date::Parse dependency
 * Made commonlog regexp in ApacheLog more flexible

2007-01-10 moj
 * Added user/remove action
 * Changed sure_delete to be a plugin phrase
 * Added User::Remove screen (similar to EPrint::Remove)
 * Added phrases for User::Remove

2007-01-11 moj
 * Public::RequestCopy stores actor as user's name (if logged in)
    or email address (if not).

2007-01-11 tmb
 * Added first cut of metadata fields, phrases and citations for new 
    eprint types.

2007-01-11 tmb
 * Added necessary bits to make activating minimal users simple.