@@ -6201,3 +6201,6 @@ PACKAGE: 2.2.99.2
 
 2007-01-11 tmb
  * Added necessary bits to make activating minimal users simple.
+
+2007-01-16 moj
+ * Added exists_and_set checks to DC exporter.
